--- a/package.json
+++ b/package.json
@@ -2,14 +2,32 @@
   "name": "web-sys-two",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://wsfall2021.online/",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/material": "^5.5.0",
+    "@mui/styles": "^5.5.1",
+    "@mui/system": "^5.5.1",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-js": "^4.1.1",
+    "easybase-react": "^2.2.13",
+    "firebase": "^9.6.9",
+    "ncrypt-js": "^2.0.0",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.0",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "redux-logger": "^3.0.6",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9"
   }
 }
